<resources>
    <string name="app_name">Buttons</string>
    <string name="logo_text">Buttons</string>
    <string name="new_game_button_txt">New Game</string>
    <string name="scores_button_txt">Scores</string>
    <string name="player_name_txt">Player 1</string>
    <string name="title_activity_gamemode">gamemodeActivity</string>
    <string name="choose_difficulty_txt">Choose Difficulty</string>
    <string name="choose_gamemode_txt">Choose Gamemode</string>
    <string name="colors_gamemode">Colors</string>
    <string name="icons_gamemode">Icons</string>
    <string name="please_wait">Please wait!</string>
    <string name="testicongamemode">TestIconGamemode</string>
    <string name="try_icons_gamemode">Try Food-mode!</string>
    <!--Google Ads_ID-->
    <string name="banner_ad_unit_id">ca-app-pub-4970672389873444/3568885213</string>
    <string name="pokemons">Monster</string>
    <string name="time"> Time:</string>
    <string name="hit_the_monster">Hit the monster you see as fast as you can!</string>
    <string name="time_remaining">30</string>
    <string name="score_achieved">0</string>
    <string name="lifes_counter">3</string>
    <string name="lifes_textfield">Lifes</string>
    <string name="score_textfield">Score:</string>
    <string name="start_game_button">Start Game!</string>
    <string name="time_textfield">  Time:</string>
</resources>
