<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_gamemode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ellophantdesign.haayhappen.Buttons.gamemodeActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_gamemode_txt"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="50sp"
            android:layout_above="@+id/colorsbutton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="70dp" />

        <Button
            android:id="@+id/colorsbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:onClick="OnColorsBtnPressed"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:text="@string/colors_gamemode"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="60dp" />

        <Button
            android:id="@+id/Pokemons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:onClick="OnPokemonBtnPressed"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:text="@string/pokemons"
            android:layout_below="@+id/colorsbutton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/iconsbuybutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:text="@string/try_icons_gamemode"
            android:onClick="buyClick"
            android:layout_below="@+id/Pokemons"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/Icons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:text="@string/icons_gamemode"
            android:onClick="onIconButtonClicked"
            android:visibility="gone"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/Pokemons"/>

    </LinearLayout>

</RelativeLayout>
