<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pokemon"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ellophantdesign.haayhappen.Buttons.pokemonActivity">


    <!--Text in the middle of the screen: "Hit the color you see as fast as you can!"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3"
        android:background="@android:color/white">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.49"
                android:text="@string/time"
                android:textColor="@color/common_google_signin_btn_text_light_pressed"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/timerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.53"
                android:text="@string/time_remaining"
                android:textColor="@color/common_google_signin_btn_text_light_pressed"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lifetextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.27"
                android:text="@string/lifes_textfield"
                android:textColor="@color/common_google_signin_btn_text_light_pressed"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lifestextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.51"
                android:text="@string/lifes_counter"
                android:textColor="@color/common_google_signin_btn_text_light_pressed"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.46"
                android:text="@string/score_textfield"
                android:textColor="@color/common_google_signin_btn_text_light_pressed"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/gamescore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:text="@string/score_achieved"
                android:textColor="@color/common_google_signin_btn_text_light_pressed"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/screencolor"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="115dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="100dp"
            android:layout_weight="3"
            android:adjustViewBounds="true"
            android:background="@android:color/white"
            android:padding="20dp"
            android:scaleType="fitCenter" />
        <Button
            android:id="@+id/screenbackground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@android:color/white"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_height="90dp">

            <Button
                android:id="@+id/bullbasurButton"
                android:layout_weight="1"
                android:background="@drawable/ic_bullbasaur"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/charmandaButton"
                android:layout_weight="1"
                android:background="@drawable/ic_charmander"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                tools:ignore="ButtonStyle" />


            <Button
                android:id="@+id/jigglypuffButton"
                android:layout_weight="1"
                android:background="@drawable/ic_jigglypuff"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/pikachuButton"
                android:layout_weight="1"
                android:background="@drawable/ic_pikachu"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btn_start_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_instructions"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/grey_button_style"
        android:padding="20dp"
        android:text="@string/start_game_button"
        android:textColor="@color/common_google_signin_btn_text_light_pressed"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textview_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="149dp"
        android:text="@string/hit_the_monster"
        android:textColor="@color/common_google_signin_btn_text_light_pressed"
        android:textSize="15sp" />

</RelativeLayout>

